@@ -1,5 +1,10 @@
 2005-11-16  Ales Hakl  <ales at hakl dot net>
 
+	* src/hash.c (hash_t): Native representation of hash tables
+
+	* src/native.c (native_form_or, native_form_and): Working forms
+	"or" and "and"
+
 	* src/hash.c: Hash implementation on top of scheme objects
 
 	* dfsch/hash.h: Hash data type
